--- a/01.html
+++ b/01.html
@@ -27,7 +27,7 @@
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px; background-color: snow">
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Class Exercise</h2>
     <p class="pcontent">
-      Today, we were introduced to HTML and CSS. This was the day that this website was born. We also learned tried connecting electrical components to the microbit via a breadboard.
+      Today, we were introduced to HTML and CSS. This was the day that this website was born. We also tried connecting electrical components to the microbit via a breadboard.
     </p>
     <br/>
     <p class="pcontent">
@@ -43,14 +43,8 @@
     </p>
 
     <p class="pcontent">
-      <h3>Problems faced</h3> <br>
-      It was a little tricky trying to make the variable resistor work because the varying resistor in the diagram looked 
-      different from the actual component. But with some technical knowledge and a few attempts, we were able to make it work! 
-      The feeling of accomplishment made the confusion worthwhile.
-    </p>
+      <h2>Thoughts</h2><br/>
 
-    <p class="pcontent">
-      <i>Lessons learnt</i> <br>
       The biggest takeaway from this lesson was the basic knowledge of building a website from scratch. We explored various functions within a website:
       <ul>
         <li>Adding hyperlinks</li>
@@ -61,10 +55,6 @@
         <li>Breaking a line;</li>
         <li>Adding emojis and gifs. &#128515</li>
       </ul>
-    </p>
-
-    <p class="pcontent">
-      <i>Possible applications</i> <br>
       With the ability to connect and control external components to the mircrobit, we can attach other useful sensors 
       and external power source to power the microbit remotely. <br>
     </p>
@@ -74,12 +64,7 @@
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Microbit Project Progress</h2>
     <img style="text-align: center;" src="IMAGE/week1_brainstorm.jpeg"; width=100%;> <br>
     <p class="pcontent">
-      The brainstorming session for the chosen object began. Here were some of the options that we considered. We began by
-      looking at potential movements - those that were gradual and measurable.
-    </p>
-
-    <p class="pcontent">
-      From there, we shortlisted three - Tap, Swivel Chair and a Box. We then proceeded to analyse each of their form and function,
+      We shortlisted three objects - Tap, Swivel Chair and a Box. We analysed each of its form and function,
       and assess their potential for this project.
     </p>
 
@@ -89,8 +74,7 @@
     <p class="pcontent">
       We thought it would be interesting to pick an everyday object and measure a fluid element. The intention was to vary sound
       or visuals with the intensity of the water flow. The strategy was to place impact or pressure sensors on the pivoting
-      point of the tap, or the bottom of the sink bed. With the ability to vary sound using the flow of water, perhaps
-      it would then be possible to play a tune with multiple taps? WATER BAND MOMENT.
+      point of the tap, or the bottom of the sink bed. With the ability to vary sound using the flow of water, maybe it's a delight to wash the dishes everynight afterall. 
     </p>
 
     <h2 style="font-weight: normal; font-size: 25px; text-align: left;">Swivel Chair</h2>
