image links update for organisation

--- a/01.html
+++ b/01.html
@@ -31,7 +31,7 @@
     </p>
     <br/>
     <p class="pcontent">
-      <img style="text-align: center;" src="IMAGE/gif_variableresistor.gif"; height="50%"> <br>
+      <img style="text-align: center;" src="IMAGE/01_variableresistor.gif"; height="50%"> <br/>
       <br/>
       We used components like;
       <ul>
@@ -62,7 +62,7 @@
 
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px;">
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Microbit Project Progress</h2>
-    <img style="text-align: center;" src="IMAGE/week1_brainstorm.jpeg"; width=100%;> <br>
+    <img style="text-align: center;" src="IMAGE/01_brainstorm.jpeg"; width=100%;> <br>
     <p class="pcontent">
       We shortlisted three objects - Tap, Swivel Chair and a Box. We analysed each of its form and function,
       and assess their potential for this project.
