01 image links updated + copy edit

--- a/01.html
+++ b/01.html
@@ -69,7 +69,7 @@
     </p>
 
     <h2 style="font-weight: normal; font-size: 25px; text-align: left;">Tap</h2>
-    <!-- INSERT <img> HERE -->
+    <img style="text-align: center;" src="IMAGE/01_tap.GIF"; height="50%"> <br/>
     <p class="pcontent"> Specifically, the flow of water.</p>
     <p class="pcontent">
       We thought it would be interesting to pick an everyday object and measure a fluid element. The intention was to vary sound
@@ -78,20 +78,18 @@
     </p>
 
     <h2 style="font-weight: normal; font-size: 25px; text-align: left;">Swivel Chair</h2>
-    <img src="IMAGE/swivelchair.jpg" style="width: 50%;">
+    <img src="IMAGE/01_studiochair.GIF" style="width: 50%;">
     <p class="pcontent"> Specifically, the green studio chair.</p>
     <p class="pcontent">
-      Like the tap, we wanted to use everyday-forgotten items to nudge people to gain a greater appreciation for the things around them.
-      We intended to program the accelerometer to respond to the speed at which its occupant was rolling about.
-      This was to bring an element of fun and play into the everyday object.
-      Unlike the tap however, the chair had a greater potential of serving a purpose. We also intended to program light sensors
-      on the backrest to indicate whether a chair was occupied or not. This could signify the availability of seats in the studio, hence
+      We hope to nudge people to better appreciate for everyday items by introducing an element of fun.
+      Ideas included the use of an accelerometer to respond to the speed at which its occupant was rolling about, or a light sensor
+      on the backrest to indicate whether a chair was occupied or not. This latter could be use to signify the availability of seats in the studio, hence
       serving a pragmatic function beyond play.
     </p>
 
     <br>
 
-    <!-- Side by Side images here-->
+    <!-- Side by Side images here
     <div class="row_3" style="text-align: center;">
       <div class="column_3">
         <img src="IMAGE/Chair_Sitting - Copy.PNG" alt="Chair_Sitting" style="height: 215px;"> <br>
@@ -106,7 +104,7 @@
         <figcaption style="text-align: center;"> Chair reacting to movement. </figcaption> <br>
       </div>
     </div>
-
+-->
     <h2 style="font-weight: normal; font-size: 25px; text-align: left;">Box</h2>
     <div class="row_2" style="text-align: center;">
       <div class="column_2">
