updating image links

--- a/01.html
+++ b/01.html
@@ -42,9 +42,7 @@
       </ul>
     </p>
 
-    <p class="pcontent">
-      <h2>Thoughts</h2><br/>
-
+    <p class="pcontent"><br/>
       The biggest takeaway from this lesson was the basic knowledge of building a website from scratch. We explored various functions within a website:
       <ul>
         <li>Adding hyperlinks</li>
@@ -62,23 +60,23 @@
 
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px;">
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Microbit Project Progress</h2>
-    <img style="text-align: center;" src="IMAGE/01_brainstorm.jpeg"; width=100%;> <br>
+    <img style="text-align: center;" src="IMAGE/01_brainstorm.jpeg"; width=100%;> <br/><br/>
     <p class="pcontent">
-      We shortlisted three objects - Tap, Swivel Chair and a Box. We analysed each of its form and function,
-      and assess their potential for this project.
+      We shortlisted three objects - Tap, Swivel Chair and a Box. <br> We analysed each of its form and function,
+      and assessed their potential for this project.
     </p>
-
+    <br/><br/>
     <h2 style="font-weight: normal; font-size: 25px; text-align: left;">Tap</h2>
-    <img style="text-align: center;" src="IMAGE/01_tap.GIF"; height="50%"> <br/>
+    <img style="text-align: center;" src="IMAGE/01_tap.GIF"; width="800px"> <br/>
     <p class="pcontent"> Specifically, the flow of water.</p>
     <p class="pcontent">
       We thought it would be interesting to pick an everyday object and measure a fluid element. The intention was to vary sound
       or visuals with the intensity of the water flow. The strategy was to place impact or pressure sensors on the pivoting
       point of the tap, or the bottom of the sink bed. With the ability to vary sound using the flow of water, maybe it's a delight to wash the dishes everynight afterall. 
     </p>
-
+<br/> <br/>
     <h2 style="font-weight: normal; font-size: 25px; text-align: left;">Swivel Chair</h2>
-    <img src="IMAGE/01_studiochair.GIF" style="width: 50%;">
+    <img src="IMAGE/01_studiochair.GIF"; width="800px">
     <p class="pcontent"> Specifically, the green studio chair.</p>
     <p class="pcontent">
       We hope to nudge people to better appreciate for everyday items by introducing an element of fun.
@@ -86,8 +84,6 @@
       on the backrest to indicate whether a chair was occupied or not. This latter could be use to signify the availability of seats in the studio, hence
       serving a pragmatic function beyond play.
     </p>
-
-    <br>
 
     <!-- Side by Side images here
     <div class="row_3" style="text-align: center;">
@@ -104,14 +100,14 @@
         <figcaption style="text-align: center;"> Chair reacting to movement. </figcaption> <br>
       </div>
     </div>
--->
+--><br/><br/>
     <h2 style="font-weight: normal; font-size: 25px; text-align: left;">Box</h2>
     <div class="row_2" style="text-align: center;">
       <div class="column_2">
-        <img style="text-align: center;" src="IMAGE/box(1).JPG" width="400px">
+        <img style="text-align: center;" src="IMAGE/01_lasercutacrylic.JPG" width="800px">
       </div>
       <div class="column_2">
-        <img style="text-align: center;" src="IMAGE/dice.JPG"; width="400px">
+        <img style="text-align: center;" src="IMAGE/01_dice.JPG"; width="800px">
       </div>
     </div>
 
