--- a/01.html
+++ b/01.html
@@ -51,8 +51,8 @@
         <li>Breaking a line;</li>
         <li>Adding emojis and gifs. &#128515</li>
       </ul>
-      With the ability to connect and control external components to the mircrobit, we can attach other useful sensors 
-      and external power source to power the microbit remotely. <br>
+      <!--With the ability to connect and control external components to the mircrobit, we can attach other useful sensors 
+      and external power source to power the microbit remotely. <br> -->
     </p>
   </div>
 
