copy edit + image update

--- a/01.html
+++ b/01.html
@@ -40,7 +40,7 @@
         <li>Variable resistors</li>
         <li>Connecting wires</li>
       </ul>
-    <br><br>>
+    <br/><br/>
       The biggest takeaway from this lesson was the basic knowledge of building a website from scratch. We explored various functions within a website:
       <ul>
         <li>Adding hyperlinks</li>
@@ -102,26 +102,29 @@
     <h2 style="font-weight: normal; font-size: 25px; text-align: left;">Box</h2>
     <div class="row_2" style="text-align: center;">
       <div class="column_2">
-        <img style="text-align: center;" src="IMAGE/01_lasercutacrylic.JPG" width="800px">
+        <img style="text-align: center;" src="IMAGE/01_lasercutacrylic.JPG" width="400px">
       </div>
       <div class="column_2">
-        <img style="text-align: center;" src="IMAGE/01_dice.JPG"; width="800px">
+        <img style="text-align: center;" src="IMAGE/01_dice.JPG"; width="400px">
       </div>
     </div>
 
-    <p class="pcontent">
+    <p class="pcontent">Specifically, a  transparent box. We thought a multiversatile cube that could facilitate many types of games, beyond just being a regular dice would be nice.
     </p>
+    <p class="pcontent">Here are some of the experimentations we did on microbit!
+      </p>
+
     <div class="row_3">
         <div class="column_3" style="text-align: center;">
-          <img src="IMAGE/shakecube.png" alt="shakecube" height="250px">
+          <img src="IMAGE/01_shakecube.png" alt="shakecube" height="250px">
           <figcaption style="text-align: center;"> Box reacting to shaking. </figcaption> <br>
         </div>
         <div class="column_3">
-          <img src="IMAGE/spincube.png" alt="spincube" height="250px">
+          <img src="IMAGE/01_spincube.png" alt="spincube" height="250px">
           <figcaption style="text-align: center;"> Box reacting to spinning. </figcaption> <br>
         </div>
         <div class="column_3">
-          <img src="IMAGE/tiltcubemusic.png" alt="tiltcubemusic" height="250px">
+          <img src="IMAGE/01_tiltcubemusic.png" alt="tiltcubemusic" height="250px">
           <figcaption style="text-align: center;"> Box reacting with music to tilting. </figcaption> <br>
         </div>
     </div>
