image size edit

--- a/01.html
+++ b/01.html
@@ -115,7 +115,7 @@
       </p>
 
     <div class="row_3">
-        <div class="column_3" style="text-align: center;">
+        <div class="column_2" style="text-align: center;">
           <img src="IMAGE/01_shakecube.png" alt="shakecube" height="250px">
           <figcaption style="text-align: center;"> Box reacting to shaking. </figcaption> <br>
         </div>
@@ -123,8 +123,7 @@
           <img src="IMAGE/01_spincube.png" alt="spincube" height="250px">
           <figcaption style="text-align: center;"> Box reacting to spinning. </figcaption> <br>
         </div>
-        <div class="column_3">
-          <img src="IMAGE/01_tiltcubemusic.png" alt="tiltcubemusic" height="250px">
+        <img style="text-align: center;" src="IMAGE/01_tiltcubemusic.png"; width=100%;> <br/><br/>
           <figcaption style="text-align: center;"> Box reacting with music to tilting. </figcaption> <br>
         </div>
     </div>
