fixing minor line breaks

--- a/01.html
+++ b/01.html
@@ -97,8 +97,8 @@
         <img src="IMAGE/Chair_Moving - Copy.PNG" alt="Chair_Moving" style="height: 215px;">
         <figcaption style="text-align: center;"> Chair reacting to movement. </figcaption> <br>
       </div>
-    </div>
---><br/><br/>
+    </div>-->
+    <br/><br/>
     <h2 style="font-weight: normal; font-size: 25px; text-align: left;">Box</h2>
     <div class="row_2" style="text-align: center;">
       <div class="column_2">
@@ -123,6 +123,7 @@
           <img src="IMAGE/01_spincube.png" alt="spincube" height="250px">
           <figcaption style="text-align: center;"> Box reacting to spinning. </figcaption> <br>
         </div>
+        <div class="row_3">
         <img style="text-align: center;" src="IMAGE/01_tiltcubemusic.png"; width=100%;> <br/><br/>
           <figcaption style="text-align: center;"> Box reacting with music to tilting. </figcaption> <br>
         </div>
