--- a/01.html
+++ b/01.html
@@ -100,34 +100,19 @@
     </div>-->
     <br/><br/>
     <h2 style="font-weight: normal; font-size: 25px; text-align: left;">Box</h2>
-    <div class="row_2" style="text-align: center;">
-      <div class="column_2">
-        <img style="text-align: center;" src="IMAGE/01_lasercutacrylic.JPG" width="400px">
-      </div>
-      <div class="column_2">
-        <img style="text-align: center;" src="IMAGE/01_dice.JPG"; width="400px">
-      </div>
-    </div>
-
+    <!-- <img style="text-align: center;" src="IMAGE/01_lasercutacrylic.JPG"; width="800px"> <br/> -->
+    <img style="text-align: center;" src="IMAGE/01_dice.JPG"; width="800px"> <br/>
     <p class="pcontent">Specifically, a  transparent box. We thought a multiversatile cube that could facilitate many types of games, beyond just being a regular dice would be nice.
     </p>
     <p class="pcontent">Here are some of the experimentations we did on microbit!
       </p>
-
-    <div class="row_3">
-        <div class="column_2" style="text-align: center;">
-          <img src="IMAGE/01_shakecube.png" alt="shakecube" height="250px">
-          <figcaption style="text-align: center;"> Box reacting to shaking. </figcaption> <br>
-        </div>
-        <div class="column_3">
-          <img src="IMAGE/01_spincube.png" alt="spincube" height="250px">
-          <figcaption style="text-align: center;"> Box reacting to spinning. </figcaption> <br>
-        </div>
-        <div class="row_3">
-        <img style="text-align: center;" src="IMAGE/01_tiltcubemusic.png"; width=100%;> <br/><br/>
-          <figcaption style="text-align: center;"> Box reacting with music to tilting. </figcaption> <br>
-        </div>
-    </div>
+      <img style="text-align: center;" src="IMAGE/01_shakecube.png"; width="800px"> <br/>
+      <figcaption style="text-align: center;">Box reacting to shaking.</figcaption> <br/>
+      <img style="text-align: center;" src="IMAGE/01_spincube.png"; width="800px"> <br/>
+      <figcaption style="text-align: center;">Box reacting to spinning.</figcaption><br/>
+      <img style="text-align: center;" src="IMAGE/01_tiltcubemusic.png"; width="800px"> <br/>
+      <figcaption style="text-align: center;">Box reacting with music to tilting.</figcaption><br/>
+       
   </div>
 
 <!-- ------------------------------------------ END OF WEEKLY CONTENT HERE ------------------------------------------------- -->
