correct image placement to 02

--- a/02.html
+++ b/02.html
@@ -58,9 +58,12 @@
     </p>
 
     <p class="pcontent">
-      Microbit interaction with the box. <!--INSERT PICS HERE-->
+      Microbit interaction with the box. 
     </p>
 
+    <img style="text-align: center;" src="IMAGE/02_tiltcubemusic.png"; width="800px"><br/>
+    <figcaption style="text-align: center;">Box reacting with music to tilting.</figcaption><br/>
+    
     <p class="pcontent">
       Evolution of the chosen form.
       <div class="row_5">
