trying to fix the  hire us button again

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </font>
       <h3>we are microbit tinkers</h3>
       
-      <button href="mailto: design@kiannelim.com"  class="button" style="text-align: center;">HIRE US</button>
+      <a href="mailto: design@kiannelim.com"  class="button" style="text-align: center;">HIRE US</a>
     </div>
   </div>
 
