testing image link w1 on main page

--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
    <p>
   <div class="row_3" style="text-align: center;">
     <div class="column_3">
-      <img src="IMAGE/GitHub raw-01.png" alt="WEEK 1" style="width: 200px"> <br>
+      <a href="https://kiannelim.github.io/id2116/01">
+        <img src="IMAGE/GitHub raw-01.png" alt="WEEK 1" style="width: 200px"></a>
+        
       <img src="IMAGE/GitHub raw-04.png" alt="WEEK 4" style="width: 200px">
     </div>
     <br/>
