--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
       <div class="row_2" style="text-align: center;">
         <div class="column_2">
           <img src="IMAGE/charlottedp.png" alt="charlottedp" style="width:40%"> <br/> <br/>
-          <a href="https://char-hy.github.io/id2116/" target="_blank">charlala</a>
+          <a href="https://char-hy.github.io/id2116/" target="_blank">charlotte</a>
           <!-- <a href="https://charlotteho.weebly.com/" target="_blank">CHARLOTTE HO</a> -->
         </div>
         <div class="column_2">
           <img src="IMAGE/kiannedp.png" alt="kiannedp" style="width:40%"> <br/> <br/>
-          <a href="https://kiannelim.github.io/id2116/kianne.html" target="_blank">kinana</a>
+          <a href="https://kiannelim.github.io/id2116/kianne.html" target="_blank">kianne</a>
         </div>
       </div>
     </p>
@@ -64,7 +64,7 @@
     <div class="column_3">
       <a href="https://kiannelim.github.io/id2116/01">
         <img src="IMAGE/GitHub raw-01.png" alt="WEEK 1" style="width: 200px"></a>
-        
+
       <img src="IMAGE/GitHub raw-04.png" alt="WEEK 4" style="width: 200px">
     </div>
     <br/>
