fixing  image links on landing

--- a/index.html
+++ b/index.html
@@ -63,24 +63,38 @@
   <div class="row_3" style="text-align: center;">
     <div class="column_3">
       <a href="https://kiannelim.github.io/id2116/01">
-        <img src="IMAGE/GitHub raw-01.png" alt="WEEK 1" style="width: 200px"></a>
+        <img src="IMAGE/GitHub raw-01.png" alt="WEEK 1" style="width: 300px"></a>
+    </div>
 
-      <img src="IMAGE/GitHub raw-04.png" alt="WEEK 4" style="width: 200px">
+    <div class="column_3">
+      <a href="https://kiannelim.github.io/id2116/02">
+        <img src="IMAGE/GitHub raw-02.png" alt="WEEK 2" style="width: 300px"></a>
     </div>
     <br/>
     <br/>
 
     <div class="column_3">
-      <img src="IMAGE/GitHub raw-02.png" alt="WEEK 2" style="width: 200px"> <br>
-      <img src="IMAGE/GitHub raw-05.png" alt="WEEK 5" style="width: 200px">
+      <a href="https://kiannelim.github.io/id2116/03">
+        <img src="IMAGE/GitHub raw-03.png" alt="WEEK 3" style="width: 300px"></a>
     </div>
-    <br/>
-    <br/>
 
-    <div class="column_3">
-      <img src="IMAGE/GitHub raw-03.png" alt="WEEK 3" style="width: 200px"> <br>
-      <img src="IMAGE/GitHub raw-06.png" alt="WEEK 6" style="width: 200px">
-    </div>
+    <div class="row_3" style="text-align: center;">
+      <div class="column_3">
+        <a href="https://kiannelim.github.io/id2116/04">
+          <img src="IMAGE/GitHub raw-04.png" alt="WEEK 4" style="width: 300px"></a>
+      </div>
+  
+      <div class="column_3">
+        <a href="https://kiannelim.github.io/id2116/05">
+          <img src="IMAGE/GitHub raw-05.png" alt="WEEK 5" style="width: 300px"></a>
+      </div>
+      <br/>
+      <br/>
+  
+      <div class="column_3">
+        <a href="https://kiannelim.github.io/id2116/06">
+          <img src="IMAGE/GitHub raw-06.png" alt="WEEK 6" style="width: 300px"></a>
+      </div>
   </p>
  
 </div>
