--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </div>
 
   </p>
- 
+ </div>
 </div>
 
 <footer style="margin-left: -20px; margin-left: -300px; margin-right: -300px; margin-bottom: -200px;">
