fix broken link on landing for kianne

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="column_2">
           <img src="IMAGE/kiannedp.png" alt="kiannedp" style="width:40%"> <br/> <br/>
-          <a href="https://kiannelim.github.io/id2116/kianne.html" target="_blank">kianne</a>
+          <a href="https://kiannelim.github.io/id2116/kianne.kianne.html" target="_blank">kianne</a>
         </div>
       </div>
     </p>
