intro line break

--- a/02.html
+++ b/02.html
@@ -27,8 +27,8 @@
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px; background-color: snow">
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Class Exercises</h2>
     <p class="pcontent">
-        Today we were introduced to p5.js. <br/>
-        1. turning a <a href="https://kiannelim.github.io/id2116/KIANNE/w3/bulbonoff/" target="_blank">bulb on/off</a> with a mouse click<br/>
+        Today we were introduced to p5.js. <br/><br/>
+        1. turning a <a href="https://kiannelim.github.io/id2116/KIANNE/w3/bulbonoff/" target="_blank">bulb on/off</a> with a mouse click<br/><br/><br/>
         2. creating a <a href="https://kiannelim.github.io/id2116/KIANNE/w3/digitalphotoalbum/" target="_blank">digital photo album</a>
 
         <p class="pcontent">
