adding line breaks

--- a/02.html
+++ b/02.html
@@ -29,7 +29,7 @@
     <p class="pcontent">
         Today we were introduced to p5.js. <br/><br/>
         1. turning a <a href="https://kiannelim.github.io/id2116/KIANNE/w3/bulbonoff/" target="_blank">bulb on/off</a> with a mouse click<br/><br/><br/>
-        2. creating a <a href="https://kiannelim.github.io/id2116/KIANNE/w3/digitalphotoalbum/" target="_blank">digital photo album</a>
+        2. creating a <a href="https://kiannelim.github.io/id2116/KIANNE/w3/digitalphotoalbum/" target="_blank">digital photo album</a><br/><br/>
 
         <p class="pcontent">
           Using p5.js posed problems when we accidentally left the page without saving the file. We sure learnt the hard way to save our work frequently!
