adding prev sketches on p5js

--- a/03.html
+++ b/03.html
@@ -32,6 +32,11 @@
 
       Besides that, we also learned about how to make a Neopixel (aka a strip of LED lights?) change colour.
       However, one disadvantage is that Bluetooth does not work on the Microbit while Neopixel is in use.
+
+      Weekly exercises we tried out: <br/><br/>
+        1. toggling on/off for <a href="https://kiannelim.github.io/id2116/KIANNE/w4/bulbOnOffToggle/" target="_blank">lightbulb</a> with a mouse click.<br/><br/><br/>
+        2. creating a <a href="https://kiannelim.github.io/id2116/KIANNE/w4/bulbFade/" target="_blank">bulb that fades </a>by adjusting a slider.<br/><br/>
+
     </p>
 
     <p class="pcontent">
