--- a/02.html
+++ b/02.html
@@ -86,6 +86,10 @@
 
     <img style="text-align: center;" src="IMAGE/02_tiltcubemusic.png"; width="800px"><br/>
     <figcaption style="text-align: center;">Box reacting with music to tilting.</figcaption><br/>
+
+    <video width="1920" controls>
+      <source src="02_boxtiltwithmusic" type="video/mp4">
+    </video>
     
     
   </div>
