--- a/02.html
+++ b/02.html
@@ -87,9 +87,9 @@
     <img style="text-align: center;" src="IMAGE/02_tiltcubemusic.png"; width="800px"><br/>
     <figcaption style="text-align: center;">Box reacting with music to tilting.</figcaption><br/>
 
-    <!-- <video width="960" controls>
+    <video width="960" controls>
       <source src="02_boxtiltwithmusic" type="video/mp4">
-    </video> -->
+    </video>
     
     
   </div>
