--- a/02.html
+++ b/02.html
@@ -89,6 +89,7 @@
 
     <video width="960" controls>
       <source src="02_boxtiltwithmusic" type="video/mp4">
+        <source src="movie.ogg" type="video/ogg" />
     </video>
     
     
