--- a/02.html
+++ b/02.html
@@ -88,8 +88,8 @@
     <figcaption style="text-align: center;">Box reacting with music to tilting.</figcaption><br/>
 
     <video width="960" controls>
-      <source src="02_boxtiltwithmusic" type="video/mp4">
-        <source src="movie.ogg" type="video/ogg" />
+      <source src="IMAGE/02_boxtiltwithmusic.mp4" type="video/mp4">
+      <source src="IMAGE/02_boxtiltwithmusic.mp4" type="video/ogg" />
     </video>
     
     
