--- a/01.html
+++ b/01.html
@@ -83,13 +83,14 @@
       serving a pragmatic function beyond play.
     </p>
 
-        <img src="IMAGE/Chair_Sitting - Copy.PNG" alt="Chair_Sitting" style="height: 215px;"> <br>
+        <img src="IMAGE/01_chairsitting.PNG" alt="Chair_Sitting" style="height: 215px;"> <br>
         <figcaption style="text-align: center;"> Chair reacting to availability. </figcaption> <br>
+        <video>
       <br>
-        <img src="IMAGE/Chair_Twisting - Copy.PNG" alt="Chair_Twisting" style="height: 215px;"> <br>
+        <img src="IMAGE/01_chairtwisting.PNG" alt="Chair_Twisting" style="height: 215px;"> <br>
         <figcaption style="text-align: center;"> Chair reacting to swiveling. </figcaption> <br>
       <br>
-        <img src="IMAGE/Chair_Moving - Copy.PNG" alt="Chair_Moving" style="height: 215px;">
+        <img src="IMAGE/01_ChairMoving.PNG" alt="Chair_Moving" style="height: 215px;">
         <figcaption style="text-align: center;"> Chair reacting to movement. </figcaption> <br>
       
     <br/><br/>
