--- a/01.html
+++ b/01.html
@@ -85,13 +85,15 @@
 
         <img src="IMAGE/01_chairsitting.PNG" alt="Chair_Sitting" style="height: 215px;"> <br>
         <figcaption style="text-align: center;"> Chair reacting to availability. </figcaption> <br>
-        <video>
+        <video> </video>
       <br>
         <img src="IMAGE/01_chairtwisting.PNG" alt="Chair_Twisting" style="height: 215px;"> <br>
         <figcaption style="text-align: center;"> Chair reacting to swiveling. </figcaption> <br>
+        <video> </video>
       <br>
         <img src="IMAGE/01_ChairMoving.PNG" alt="Chair_Moving" style="height: 215px;">
         <figcaption style="text-align: center;"> Chair reacting to movement. </figcaption> <br>
+        <video> </video>
       
     <br/><br/>
     <h2 style="font-weight: normal; font-size: 25px; text-align: left;">Box</h2>
