--- a/01.html
+++ b/01.html
@@ -89,7 +89,7 @@
       <br>
         <img src="IMAGE/01_chairtwisting.PNG" alt="Chair_Twisting" style="height: 215px;"> <br>
         <figcaption style="text-align: center;"> Chair reacting to swiveling. </figcaption> <br>
-        <video> </video>
+        <img src="IMAGE/01_chairsittwist.gif" alt="Chair_SitTwist" style="height: 215px;"> <br>
       <br>
         <img src="IMAGE/01_ChairMoving.PNG" alt="Chair_Moving" style="height: 215px;">
         <figcaption style="text-align: center;"> Chair reacting to movement. </figcaption> <br>
