temper fade update

--- a/03.html
+++ b/03.html
@@ -37,21 +37,8 @@
         1. toggling on/off for <a href="https://kiannelim.github.io/id2116/KIANNE/w4/bulbOnOffToggle/" target="_blank">lightbulb</a> with a mouse click.<br/><br/><br/>
         2. creating a <a href="https://kiannelim.github.io/id2116/KIANNE/w4/bulbFade/" target="_blank">bulb that fades </a>by adjusting a slider.<br/><br/>
 
-    </p>
+        More: Here's what we did tring to adapt the above toggle on/off example with <a href="https://kiannelim.github.io/id2116/KIANNE/w4/temperFade/" target="_blank">fading </a>different emotion pictures!<br/><br/>
 
-    <p class="pcontent">
-      <i>Problems faced</i> <br>
-      Connectivity.
-    </p>
-
-    <p class="pcontent">
-      <i>Lessons learnt</i> <br>
-      In progress...
-    </p>
-
-    <p class="pcontent">
-      <i>Possible applications</i> <br>
-      Changing the shade of light in response to the varying values of the variables. <br>
     </p>
   </div>
 
