--- a/03.html
+++ b/03.html
@@ -35,9 +35,9 @@
 
       Weekly exercises we tried out: <br/><br/>
         1. toggling on/off for <a href="https://kiannelim.github.io/id2116/KIANNE/w4/bulbOnOffToggle/" target="_blank">lightbulb</a> with a mouse click.<br/><br/><br/>
-        2. creating a <a href="https://kiannelim.github.io/id2116/KIANNE/w4/bulbFade/" target="_blank">bulb that fades </a>by adjusting a slider.<br/><br/>
+        2. creating a <a href="https://kiannelim.github.io/id2116/KIANNE/w4/bulbFade/" target="_blank">bulb that fades</a> by adjusting a slider.<br/><br/>
 
-        More: Here's what we did tring to adapt the above toggle on/off example with <a href="https://kiannelim.github.io/id2116/KIANNE/w4/temperFade/" target="_blank">fading </a>different emotion pictures!<br/><br/>
+        More: Here's what we did to adapt the above toggle on/off example with <a href="https://kiannelim.github.io/id2116/KIANNE/w4/temperFade/" target="_blank">fading</a> different emotion pictures!<br/><br/>
 
     </p>
   </div>
