--- a/01.html
+++ b/01.html
@@ -83,18 +83,17 @@
       serving a pragmatic function beyond play.
     </p>
 
-        <img src="IMAGE/01_chairsitting.PNG" alt="Chair_Sitting" style="height: 215px;"> <br>
-        
+        <img src="IMAGE/01_chairsitting.PNG" alt="Chair_Sitting" style="height: 215px;">
+        <img src="IMAGE/01_chairsitting.gif alt="Chair_SitTwist" style="height: 215px;"> <br>
         <figcaption style="text-align: center;"> Chair reacting to availability. </figcaption> <br>
-        <video> </video>
       <br>
         <img src="IMAGE/01_chairtwisting.PNG" alt="Chair_Twisting" style="height: 215px;">
         <img src="IMAGE/01_chairsittwist.gif" alt="Chair_SitTwist" style="height: 215px;"> <br>
         <figcaption style="text-align: center;"> Chair reacting to swiveling. </figcaption> <br>
       <br>
         <img src="IMAGE/01_ChairMoving.PNG" alt="Chair_Moving" style="height: 215px;">
+        <img src="IMAGE/01_chairmoving.gif" alt="Chair_SitTwist" style="height: 215px;"> <br>
         <figcaption style="text-align: center;"> Chair reacting to movement. </figcaption> <br>
-        <video> </video>
       
     <br/><br/>
     <h2 style="font-weight: normal; font-size: 25px; text-align: left;">Box</h2>
