--- a/01.html
+++ b/01.html
@@ -84,7 +84,7 @@
     </p>
 
         <img src="IMAGE/01_chairsitting.PNG" alt="Chair_Sitting" style="height: 215px;">
-        <img src="IMAGE/01_chairsitting.gif alt="Chair_SitTwist" style="height: 215px;"> <br>
+        <img src="IMAGE/01_chairsitting.gif" alt="Chair_SitTwist" style="height: 215px;"> <br>
         <figcaption style="text-align: center;"> Chair reacting to availability. </figcaption> <br>
       <br>
         <img src="IMAGE/01_chairtwisting.PNG" alt="Chair_Twisting" style="height: 215px;">
