--- a/04.html
+++ b/04.html
@@ -33,21 +33,6 @@
       Besides that, we also learned about how to make a Neopixel (aka a strip of LED lights?) change colour.
       However, one disadvantage is that Bluetooth does not work on the Microbit while Neopixel is in use.
     </p>
-
-    <p class="pcontent">
-      <i>Problems faced</i> <br>
-      Connectivity.
-    </p>
-
-    <p class="pcontent">
-      <i>Lessons learnt</i> <br>
-      In progress...
-    </p>
-
-    <p class="pcontent">
-      <i>Possible applications</i> <br>
-      Changing the shade of light in response to the varying values of the variables. <br>
-    </p>
   </div>
 
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px;">
@@ -69,6 +54,7 @@
 
     <img src="IMAGE/brainstorming1.jpg" alt="box(4)" style="height: 800px;"> <br>
     <img src="IMAGE/brainstorming2.jpg" alt="box(4)" style="height: 800px;"> <br>
+    <img src="IMAGE/04_statetransitiondiagramdraft.jpg" alt="box(4)" style="height: 800px;"> <br>
   </div>
 <!-- ------------------------------------------ END OF WEEKLY CONTENT HERE ------------------------------------------------- -->
   <style>
