--- a/06.html
+++ b/06.html
@@ -51,14 +51,13 @@
         <li>Breaking a line;</li>
         <li>Adding emojis and gifs. &#128515</li>
       </ul>
-      <!--With the ability to connect and control external components to the mircrobit, we can attach other useful sensors 
-      and external power source to power the microbit remotely. <br> -->
     </p>
   </div>
 
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px;">
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Microbit Project Progress</h2>
-    <img style="text-align: center;" src="IMAGE/01_brainstorm.jpeg"; width=100%;> <br/><br/>
+    <img style="text-align: center;" src="IMAGE/06_statetransitiondiagramdraft (1).jpg"; width=50%;> <br/>
+    <img style="text-align: center;" src="IMAGE/06_statetransitiondiagramdraft (2).jpg"; width=50%;> <br/>
     <p class="pcontent">
       We shortlisted three objects - Tap, Swivel Chair and a Box. <br> We analysed each of its form and function,
       and assessed their potential for this project.
