--- a/05.html
+++ b/05.html
@@ -28,7 +28,7 @@
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Prototyping</h2>
     <br/>
     <p class="pcontent">
-      <img style="text-align: center;" src="IMAGE/05_hardware.jpg"; height="800px"> <br/>
+      <img style="text-align: center;" src="IMAGE/05_hardware.jpg"; width="50%"> <br/>
       <br/>
       Some new candy hardware that we are experimenting with:
       <ul>
