--- a/01.html
+++ b/01.html
@@ -115,7 +115,8 @@
   <br/>
   <br/>
   <br/>
- <p><a href="#C H A R K I">back to top</a></p>
+ <!-- <p><a href="#C H A R K I">back to top</a></p> -->
+ <a href="https://char-hy.github.io/id2116/">back to home</a>
 <br/>
 <p style="font-size:10px"> <i>©2020 Charki.</i></p>
 <br/>
