--- a/01.html
+++ b/01.html
@@ -112,17 +112,16 @@
 <!-- ------------------------------------------ END OF WEEKLY CONTENT HERE ------------------------------------------------- -->
 
 <footer style="margin-left: -20px; margin-left: -300px; margin-right: -300px; margin-bottom: -200px;">
-  <br>
-  <br>
-  <br>
- <a href="https://kiannelim.github.io/id2116/">back to home</a>
-  <br>
-  <br>
-<p style="font-size:10px"> <i>©2020 Charki.</i></p>
-  <br>
-  <br>
-  <br>
-  <br>
+  <br/>
+    <br/>
+    <br/>
+   <p><a href="https://kiannelim.github.io/id2116/">back to home</a></p>
+  <br/>
+  <p style="font-size:10px"> <i>©2020 Charki.</i></p>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
 </footer>
   </body>
 
