--- a/02.html
+++ b/02.html
@@ -99,15 +99,15 @@
 
 <footer style="margin-left: -20px; margin-left: -300px; margin-right: -300px; margin-bottom: -200px;">
   <br/>
+    <br/>
+    <br/>
+   <p><a href="https://kiannelim.github.io/id2116/">back to home</a></p>
+  <br/>
+  <p style="font-size:10px"> <i>©2020 Charki.</i></p>
   <br/>
   <br/>
- <p><a href="#C H A R K I">back to top</a></p>
-<br/>
-<p style="font-size:10px"> <i>©2020 Charki.</i></p>
-<br/>
-<br/>
-<br/>
-<br/>
+  <br/>
+  <br/>
 </footer>
 
 </body> 
