--- a/05.html
+++ b/05.html
@@ -73,39 +73,30 @@
     </p>
     <br/><br/>
     <h2 style="font-weight: normal; font-size: 25px; text-align: left;">Tap</h2>
-    <img style="text-align: center;" src="IMAGE/01_tap.GIF"; width="800px"> <br/>
-    <p class="pcontent"> Specifically, the flow of water.</p>
-    <p class="pcontent">
-      We thought it would be interesting to pick an everyday object and measure a fluid element. The intention was to vary sound
-      or visuals with the intensity of the water flow. The strategy was to place impact or pressure sensors on the pivoting
-      point of the tap, or the bottom of the sink bed. With the ability to vary sound using the flow of water, maybe it's a delight to wash the dishes everynight afterall. 
-    </p>
-<br/> <br/>
-    <h2 style="font-weight: normal; font-size: 25px; text-align: left;">Swivel Chair</h2>
-    <img src="IMAGE/01_studiochair.GIF"; width="800px">
-    <p class="pcontent"> Specifically, the green studio chair.</p>
-    <p class="pcontent">
-      We hope to nudge people to better appreciate for everyday items by introducing an element of fun.
-      Ideas included the use of an accelerometer to respond to the speed at which its occupant was rolling about, or a light sensor
-      on the backrest to indicate whether a chair was occupied or not. This latter could be use to signify the availability of seats in the studio, hence
-      serving a pragmatic function beyond play.
-    </p>
-
-    <!-- Side by Side images here
-    <div class="row_3" style="text-align: center;">
-      <div class="column_3">
-        <img src="IMAGE/Chair_Sitting - Copy.PNG" alt="Chair_Sitting" style="height: 215px;"> <br>
-        <figcaption style="text-align: center;"> Chair reacting to availability. </figcaption> <br>
-      </div>
-      <div class="column_3">
-        <img src="IMAGE/Chair_Twisting - Copy.PNG" alt="Chair_Twisting" style="height: 215px;"> <br>
-        <figcaption style="text-align: center;"> Chair reacting to swiveling. </figcaption> <br>
-      </div>
-      <div class="column_3">
-        <img src="IMAGE/Chair_Moving - Copy.PNG" alt="Chair_Moving" style="height: 215px;">
-        <figcaption style="text-align: center;"> Chair reacting to movement. </figcaption> <br>
-      </div>
-    </div>-->
+    <table>
+      <tr>
+        <th>Object</th>
+        <th>Property</th>
+        <th>Method/Action</th>
+      </tr>
+      <tr>
+        <td>Box</td>
+        <td>Status
+            <ul>
+              <li>Text</li>
+              <li>Text</li>
+              </ul>
+              <br/>
+              Content
+            <ul>
+              <li>Text</li>
+              <li>Text</li>
+              </ul>
+          </td>
+      
+        <td>$100</td>
+      </tr>
+    </table>
     <br/><br/>
     <h2 style="font-weight: normal; font-size: 25px; text-align: left;">Box</h2>
     <!-- <img style="text-align: center;" src="IMAGE/01_lasercutacrylic.JPG"; width="800px"> <br/> -->
