--- a/05.html
+++ b/05.html
@@ -68,35 +68,10 @@
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Microbit Project Progress</h2>
     <img style="text-align: center;" src="IMAGE/01_brainstorm.jpeg"; width=50%;> <br/><br/>
     <p class="pcontent">
-      We shortlisted three objects - Tap, Swivel Chair and a Box. <br> We analysed each of its form and function,
-      and assessed their potential for this project.
+      ...
     </p>
     <br/><br/>
-    <h2 style="font-weight: normal; font-size: 25px; text-align: left;">Tap</h2>
-    <table>
-      <tr>
-        <th>Object</th>
-        <th>Property</th>
-        <th>Method/Action</th>
-      </tr>
-      <tr>
-        <td>Box</td>
-        <td>Status
-            <ul>
-              <li>Text</li>
-              <li>Text</li>
-              </ul>
-              <br/>
-              Content
-            <ul>
-              <li>Text</li>
-              <li>Text</li>
-              </ul>
-          </td>
-      
-        <td>$100</td>
-      </tr>
-    </table>
+    <h2 style="font-weight: normal; font-size: 25px; text-align: left;">...</h2>
   </div>
 
 <!-- ------------------------------------------ END OF WEEKLY CONTENT HERE ------------------------------------------------- -->
