--- a/05.html
+++ b/05.html
@@ -25,6 +25,20 @@
 <body>
   <!-- ------------------------------------------ EDIT WEEKLY CONTENT HERE ------------------------------------------------- -->
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px; background-color: snow">
+    <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Microbit Project Progress</h2>
+    <p class="pcontent">
+      <i>No lesson this week.</i>
+    </p>
+  </div>
+
+  <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px;">
+    <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Microbit Project Progress</h2>
+    <img style="text-align: center;" src="IMAGE/06_statetransitiondiagramdraft (1).jpg"; width=80%;> <br/>
+    <img style="text-align: center;" src="IMAGE/06_statetransitiondiagramdraft (2).jpg"; width=80%;> <br/>
+    <p class="pcontent">
+      
+    </p>
+    <br/><br/>
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Prototyping</h2>
     <br/>
     <p class="pcontent">
@@ -62,16 +76,6 @@
         </tr>
       </table>  
     </p>
-  </div>
-
-  <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px;">
-    <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Microbit Project Progress</h2>
-    <img style="text-align: center;" src="IMAGE/01_brainstorm.jpeg"; width=50%;> <br/><br/>
-    <p class="pcontent">
-      ...
-    </p>
-    <br/><br/>
-    <h2 style="font-weight: normal; font-size: 25px; text-align: left;">...</h2>
   </div>
 
 <!-- ------------------------------------------ END OF WEEKLY CONTENT HERE ------------------------------------------------- -->
