--- a/06.html
+++ b/06.html
@@ -34,7 +34,41 @@
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px;">
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Microbit Project Progress</h2>
     <p class="pcontent">
-     ...
+    <p class="pcontent">
+      <img style="text-align: center;" src="IMAGE/05_hardware.jpg"; width="50%"> <br/>
+      <br/>
+      Some new candy hardware that we are experimenting with:
+      <ul>
+        <li>LCD screens</li>
+        <li>Sound sensor</li>
+      </ul>
+    <br/><br/>
+    <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Step1 : Object Analysis / Modelling</h2>
+    <table>
+        <tr>
+          <th>Object</th>
+          <th>Property</th>
+          <th>Method/Action</th>
+        </tr>
+        <tr>
+          <td>Box</td>
+          <td>Status
+              <ul>
+                <li>Text</li>
+                <li>Text</li>
+                </ul>
+                <br/>
+                Content
+              <ul>
+                <li>Text</li>
+                <li>Text</li>
+                </ul>
+            </td>
+        
+          <td>$100</td>
+        </tr>
+      </table>  
+    </p>
     </p>
   </div>
 
