--- a/06.html
+++ b/06.html
@@ -46,9 +46,9 @@
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Step1 : Object Analysis / Modelling</h2>
     <table>
         <tr>
-          <th>Object</th>
-          <th>Property</th>
-          <th>Method/Action</th>
+          <td>Object</td>
+          <td>Property</td>
+          <td>Method/Action</td>
         </tr>
         <tr>
           <td>Box</td>
