--- a/02.html
+++ b/02.html
@@ -90,6 +90,8 @@
     <video width="960" controls>
       <source src="IMAGE/02_boxtiltwithmusic.mp4" type="video/mp4">
       <source src="IMAGE/02_boxtiltwithmusic.mp4" type="video/ogg" />
+      <source src="IMAGE/02_boxtiltwithmusic2.mp4" type="video/mp4">
+      <source src="IMAGE/02_boxtiltwithmusic2.mp4" type="video/ogg" />
     </video>
     
     
