--- a/02.html
+++ b/02.html
@@ -88,12 +88,12 @@
     <figcaption style="text-align: center;">Box reacting with music to tilting.</figcaption><br/>
 
     <video width="960" controls>
-      <source src="IMAGE/02_boxtiltwithmusic.mp4" type="video/mp4">
-      <source src="IMAGE/02_boxtiltwithmusic.mp4" type="video/ogg" />
+      <source src="IMAGE/02_boxtiltwithmusic (1).mp4" type="video/mp4">
+      <source src="IMAGE/02_boxtiltwithmusic (1).mp4" type="video/ogg" />
     </video>
     <video width="960" controls>
-      <source src="IMAGE/02_boxtiltwithmusic2.mp4" type="video/mp4">
-      <source src="IMAGE/02_boxtiltwithmusic2.mp4" type="video/ogg" />
+      <source src="IMAGE/02_boxtiltwithmusic (2).mp4" type="video/mp4">
+      <source src="IMAGE/02_boxtiltwithmusic (2).mp4" type="video/ogg" />
     </video>
     
     
