--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <img src="IMAGE/GitHub raw-06.png" alt="WEEK 6" style="width: 300px"></a>
     </div>
 
-    <form action="/action_page.php" style="text-align: center;">
+    <form href="https://kiannelim.github.io/id2116/06" style="text-align: center;">
       <input type="image" src="IMAGE/GitHub raw-06.png" alt="WEEK 6" style="width: 300px">
     </form>
 
