--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
       <img src="IMAGE/GitHub raw-06.png" alt="WEEK 6" style="width: 300px"></a>
     </div>
 
-    <form href="https://kiannelim.github.io/id2116/06" target="_blank">
+    <form>
+      <a href="https://kiannelim.github.io/id2116/06" target="_blank"></a>
       <input type="image" src="IMAGE/GitHub raw-06.png" alt="WEEK 6" style="width: 300px">
     </form>
 
