--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
     </div>
 
     <form>
-      <a href="https://kiannelim.github.io/id2116/06" target="_blank"></a>
-      <input type="image" src="IMAGE/GitHub raw-06.png" alt="WEEK 6" style="width: 300px">
+      <a href="https://kiannelim.github.io/id2116/06" target="_blank">
+      <input type="image" src="IMAGE/GitHub raw-06.png" alt="WEEK 6" style="width: 300px"></a>
     </form>
 
   </p>
