--- a/index.html
+++ b/index.html
@@ -85,10 +85,12 @@
       <img src="IMAGE/GitHub raw-06.png" alt="WEEK 6" style="width: 300px"></a>
     </div>
 
-    <form>
+    <!--
+    <form action="/action_page.php">
       <a href="https://kiannelim.github.io/id2116/06" target="_blank">
       <input type="image" src="IMAGE/GitHub raw-06.png" alt="WEEK 6" style="width: 300px"></a>
     </form>
+    -->
 
   </p>
  </div>
