--- a/05.html
+++ b/05.html
@@ -35,6 +35,7 @@
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Microbit Project Progress</h2>
     <img style="text-align: center;" src="IMAGE/05_statetransitiondiagramdraft (1).jpg"; width=80%;> <br/>
     <img style="text-align: center;" src="IMAGE/05_statetransitiondiagramdraft (2).jpg"; width=80%;> <br/>
+    <img style="text-align: center;" src="IMAGE/05_petbox.png"; width=80%;> <br/>
   </div>
 
 <!-- ------------------------------------------ END OF WEEKLY CONTENT HERE ------------------------------------------------- -->
