--- a/06.html
+++ b/06.html
@@ -44,30 +44,89 @@
       </ul>
     <br/><br/>
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Step1 : Object Analysis / Modelling</h2>
-    <table>
-        <tr>
-          <td>Object</td>
-          <td>Property</td>
-          <td>Method/Action</td>
-        </tr>
-        <tr>
-          <td>Box</td>
-          <td>Status
-              <ul>
-                <li>Text</li>
-                <li>Text</li>
-                </ul>
-                <br/>
-                Content
-              <ul>
-                <li>Text</li>
-                <li>Text</li>
-                </ul>
-            </td>
-        
-          <td>$100</td>
-        </tr>
-      </table>  
+    <table style="width:80%; margin:30px auto; border-collapse:collapse;">
+      <tr>
+        <th>Week no.</th>        
+        <th>Object</th>
+        <th>Property</th>
+        <th>Method/Action</td>
+      </tr>
+
+      <tr>
+        <td>2 - 5</td>
+        <td>Box</td>
+        <td>
+          <ul>
+          <li> 6 sides, 8 vertices, 8 edges </li>
+          <li> Dimensions: 80mm cube </li>
+          <li> Handheld </li>
+          <li> Cardboard </li>
+          <li> Hollow </li>
+          <li> Allows access to what's inside </li>
+          </ul>
+        </td>
+        <td>
+          <ul>
+          <li> Throw/Shake </li>
+          <li> Topple </li>
+          <li> Spin </li>
+          <li> Contains something </li>
+          <li> Open/Close lid </li>
+          <li> Roll </li>
+          </ul>
+      </td>
+      </tr>
+
+      <tr>
+        <td>5 - 7</td>
+        <td>Pet box</td>
+        <td>
+          <ul>
+          <li> 6 sides, 8 vertices, 8 edges </li>
+          <li> Dimensions: 80mm cube </li>
+          <li> Handheld </li>
+          <li> Cardboard </li>
+          <li> Hollow </li>
+          <li> Allows access to what's inside </li>
+          </ul>
+        </td>
+        <td>
+          <ul>
+          <li> Throw/Shake </li>
+          <li> Topple </li>
+          <li> Spin </li>
+          <li> Contains something </li>
+          <li> Open/Close lid </li>
+          <li> Roll </li>
+          </ul>
+       </td>
+      </tr>
+
+      <tr>
+        <td>7</td>
+        <td>Pringles scream box</td>
+        <td>
+          <ul>
+          <li> 6 sides, 8 vertices, 8 edges </li>
+          <li> Dimensions: 80mm cube </li>
+          <li> Handheld </li>
+          <li> Cardboard </li>
+          <li> Hollow </li>
+          <li> Allows access to what's inside </li>
+          </ul>
+        </td>
+        <td>
+          <ul>
+          <li> Throw/Shake </li>
+          <li> Topple </li>
+          <li> Spin </li>
+          <li> Contains something </li>
+          <li> Open/Close lid </li>
+          <li> Roll </li>
+          </ul>
+        </td>
+      </tr>
+    </table>  
     </p>
     </p>
   </div>
